fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ footer {
 
 footer > ul {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   color: #fff;
 }
 
@@ -322,7 +322,7 @@ footer > ul > li {
 footer > span {
   margin-top: 5px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   font-size: 0.9em;
   color: #fff;
 }
